--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,16 @@
 			"name": "Lennart Dohmann"
 		}
 	],
-	"require-dev": {
-		"nextcloud/coding-standard": "^1.0",
-		"nextcloud/ocp": "dev-master"
-	},
 	"require": {
-		"gdata/vaas": "^7.2.3",
-		"psr/log": "^1.1"
+		"gdata/vaas": "^7.2.3"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^9",
+		"sabre/xml": "^2.2",
+		"symfony/event-dispatcher": "^5.3.11",
+		"nextcloud/ocp": "dev-stable28",
+		"psalm/phar": "^5.17.0",
+		"nextcloud/coding-standard": "^v1.1.1"
 	},
 	"scripts": {
 		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
@@ -29,6 +32,9 @@
 	"config": {
 		"allow-plugins": {
 			"composer/package-versions-deprecated": true
+		},
+		"platform": {
+			"php": "8.1"
 		}
 	}
 }
