--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,17 @@
 		"gdata/vaas": "^7.2.3"
 	},
 	"require-dev": {
-		"symfony/event-dispatcher": "^5.3.11",
 		"nextcloud/ocp": "dev-stable28",
 		"psalm/phar": "^5.17.0",
 		"nextcloud/coding-standard": "^v1.1.1"
 	},
 	"scripts": {
 		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
-		"cs:check": "php-cs-fixer fix --dry-run --diff",
-		"cs:fix": "php-cs-fixer fix",
-		"psalm": "psalm.phar --threads=1",
-		"psalm:update-baseline": "psalm.phar --threads=1 --update-baseline",
-		"psalm:update-baseline:force": "psalm.phar --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
-		"psalm:clear": "psalm.phar --clear-cache && psalm --clear-global-cache",
-		"psalm:fix": "psalm.phar --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType"
+		"cs:check": "php-cs-fixer fix --dry-run --diff .",
+		"cs:fix": "php-cs-fixer fix .",
+		"psalm": "vendor/psalm/phar/psalm.phar --threads=1",
+		"psalm:clear": "vendor/psalm/phar/psalm.phar --clear-cache && vendor/psalm/phar/psalm.phar --clear-global-cache",
+		"psalm:fix": "vendor/psalm/phar/psalm.phar --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType"
 	},
 	"config": {
 		"allow-plugins": {
