Add missing verdict PUP for manual scan result

--- a/compose.yaml
+++ b/compose.yaml
@@ -38,6 +38,8 @@ services:
     hostname: nextcloud-db
     restart: unless-stopped
     image: mariadb:10.8
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: ncdb
