--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Create artifact 
       run: make appstore
 
-    - uses: actions/upload-artifact@v4
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: gdata-antivirus
-        path: build/artifacts
+        files: build/artifacts/*
