--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -23,6 +23,12 @@ jobs:
     - name: Build 
       run: make build
 
+    - name: replace version
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        RELEASE_VERSION=${GITHUB_REF#refs/tags/}
+        sed -i "s/version = '0\.0\.0'/version = '$RELEASE_VERSION'/g" ./appinfo/info.xml
+
     - name: Create artifact 
       run: make appstore
 
