--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -27,7 +27,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       run: |
         RELEASE_VERSION=${GITHUB_REF#refs/tags/}
-        sed -i "s/version = '0\.0\.0'/version = '$RELEASE_VERSION'/g" ./appinfo/info.xml
+        sed -i "s/<version>0.0.0<\/version>/<version>$RELEASE_VERSION<\/version>/g" ./appinfo/info.xml
 
     - name: Create artifact 
       run: make appstore
