show activities in log

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		}
 	],
 	"require": {
-		"gdata/vaas": "^8.0.0"
+		"gdata/vaas": "^8.0.2"
 	},
 	"require-dev": {
 		"nextcloud/ocp": "dev-stable28",
@@ -17,7 +17,7 @@
 		"nextcloud/coding-standard": "^v1.1.1"
 	},
 	"scripts": {
-		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
+		"lint": "find lib -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
 		"cs:check": "php-cs-fixer fix --dry-run --diff .",
 		"cs:fix": "php-cs-fixer fix .",
 		"psalm": "vendor/psalm/phar/psalm.phar --threads=1",
