On-upload: Log and ignore scan errors

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # SPDX-FileCopyrightText: Lennart Dohmann <lennart.dohmann@gdata.de>
 # SPDX-License-Identifier: AGPL-3.0-or-later
 .idea
+*.local
 *.iml
 /build/
 node_modules/
