Implement WONT_SCAN tag and improve behaviour on unscannable files

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		}
 	],
 	"require": {
-		"gdata/vaas": "^8.0.2"
+		"gdata/vaas": "^8.0.2",
+		"coduo/php-humanizer": "^5.0"
 	},
 	"require-dev": {
 		"nextcloud/ocp": "dev-stable28",
