--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # SPDX-FileCopyrightText: Lennart Dohmann <lennart.dohmann@gdata.de>
 # SPDX-License-Identifier: AGPL-3.0-or-later
+.env-local
 .idea
 *.local
 *.iml
