--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -8,51 +8,48 @@ on:
     branches: ["main"]
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-node@v4
-  #       name: setup node
-  #       with:
-  #         node-version: 20
-  #     - name: Setup BATS
-  #       uses: mig4/setup-bats@v1
-  #       with:
-  #         bats-version: 1.11.0
-  #     - uses: docker-practice/actions-setup-docker@master
-  #     - name: install nextcloud
-  #       env:
-  #         CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
-  #         CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
-  #       run: ./install.sh
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        name: setup node
+        with:
+          node-version: 20
+      - name: Setup BATS
+        uses: mig4/setup-bats@v1
+        with:
+          bats-version: 1.11.0
+      - uses: docker-practice/actions-setup-docker@master
+      - name: install nextcloud
+        env:
+          CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
+        run: ./install.sh
 
-  #     - name: run tests
-  #       env:
-  #         CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
-  #         CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
-  #       run: bats --no-parallelize-across-files --jobs 3 ./tests
+      - name: run tests
+        env:
+          CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
+        run: bats --no-parallelize-across-files --jobs 3 ./tests
 
-  #     - uses: actions/upload-artifact@master
-  #       with:
-  #         name: build-dir
-  #         path: build/
+      - uses: actions/upload-artifact@master
+        with:
+          name: build-dir
+          path: build/
 
   release:
-    # needs:
-    #   - test
+    needs:
+      - test
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
 
-      # - uses: actions/download-artifact@master
-      #   with:
-      #     name: build-dir
-      #     path: build/
-
-      - name: Build for appstore
-        run: make appstore
+      - uses: actions/download-artifact@master
+        with:
+          name: build-dir
+          path: build/
 
       - name: replace version
         id: replace-version
