--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -65,6 +65,7 @@ jobs:
 
       - name: Attach tarball to github release
         uses: svenstaro/upload-release-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
         id: attach_to_release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
