add the status code to the status code check

--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -35,12 +35,12 @@ jobs:
 
       - name: admin clean Upload
         run: |
-          STATUS_CODE=$(curl --silent -u testuser:myfancysecurepassword234 -T /tmp/clean.txt http://127.0.0.1/remote.php/dav/files/testuser/clean.txt)
+          STATUS_CODE=$(curl --silent -w "%{http_code}" -u testuser:myfancysecurepassword234 -T /tmp/clean.txt http://127.0.0.1/remote.php/dav/files/testuser/clean.txt)
           [[ $STATUS_CODE -ge 200 && $STATUS_CODE -lt 300 ]] || exit 1
 
       - name: admin pup Upload
         run: |
-          STATUS_CODE=$(curl --silent -u testuser:myfancysecurepassword234 -T /tmp/pup.exe http://127.0.0.1/remote.php/dav/files/testuser/pup.exe)
+          STATUS_CODE=$(curl --silent -w "%{http_code}" -u testuser:myfancysecurepassword234 -T /tmp/pup.exe http://127.0.0.1/remote.php/dav/files/testuser/pup.exe)
           [[ $STATUS_CODE -ge 200 && $STATUS_CODE -lt 300 ]] || exit 1
 
       - name: test upload when vaas does not function
@@ -49,7 +49,7 @@ jobs:
           CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
         run: |
           docker exec --user www-data -i nextcloud-container php occ config:app:set gdatavaas clientSecret --value="WRONG_PASSWORD"
-          STATUS_CODE=$(curl --silent -u admin:admin -T /tmp/eicar.com.txt http://127.0.0.1/remote.php/dav/files/admin/eicar.com.txt)
+          STATUS_CODE=$(curl --silent -w "%{http_code}" -u admin:admin -T /tmp/eicar.com.txt http://127.0.0.1/remote.php/dav/files/admin/eicar.com.txt)
           [[ $STATUS_CODE -ge 200 && $STATUS_CODE -lt 300 ]] || exit 1
           docker exec --user www-data -i nextcloud-container php occ config:app:set gdatavaas clientSecret --value="$CLIENT_SECRET"
 
