--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
 	},
 	"require-dev": {
 		"nextcloud/ocp": "dev-stable28",
-		"psalm/phar": "^5.17.0",
-		"nextcloud/coding-standard": "^v1.1.1",
-		"symfony/console": "^6.4"
+		"symfony/console": "v6.4.8",
+		"psalm/phar": "5.24.0",
+		"nextcloud/coding-standard": "v1.2.1"
 	},
 	"scripts": {
 		"lint": "find lib -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
