--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -2,38 +2,83 @@ name: Makefile CI
 
 on:
   push:
-    branches: [ "main" ]
-    tags: [ "*" ]
+    branches: ["main"]
+    tags: ["*"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        name: setup node
+        with:
+          node-version: 20
+      - name: Setup BATS
+        uses: mig4/setup-bats@v1
+        with:
+          bats-version: 1.11.0
+      - uses: docker-practice/actions-setup-docker@master
+      - name: install nextcloud
+        env:
+          CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
+        run: ./install.sh
 
-    - uses: actions/setup-node@v4
-      name: setup node
-      with:
-        node-version: 20
+#      - name: run tests
+#        env:
+#          CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
+#          CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
+#        run: bats --no-parallelize-across-files --jobs 3 ./tests
 
-    - name: Build 
-      run: make build
+      - uses: actions/upload-artifact@master
+        with:
+          name: build-dir
+          path: build/
 
-    - name: replace version
-      if: startsWith(github.ref, 'refs/tags/')
-      run: |
-        RELEASE_VERSION=${GITHUB_REF#refs/tags/}
-        sed -i "s/<version>0.0.0<\/version>/<version>$RELEASE_VERSION<\/version>/g" ./appinfo/info.xml
+  release:
+    needs:
+      - test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Create artifact 
-      run: make appstore
+      - uses: actions/download-artifact@master
+        with:
+          name: build-dir
+          path: build/
 
-    - name: Release
-      uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: build/artifacts/*
+      - name: replace version
+        id: replace-version
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          RELEASE_VERSION=${GITHUB_REF#refs/tags/}
+          sed -i "s/<version>0.0.0<\/version>/<version>$RELEASE_VERSION<\/version>/g" ./appinfo/info.xml
+          echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_OUTPUT
+
+      - name: Github Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: build/artifacts/*
+
+      - name: Attach tarball to github release
+        uses: svenstaro/upload-release-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        id: attach_to_release
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./build/artifacts/gdatavaas.tar.gz
+          asset_name: gdatavaas-${{ steps.replace-version.outputs.RELEASE_VERSION }}.tar.gz
+          tag: ${{ github.ref }}
+          overwrite: true
+
+       - name: Upload app to Nextcloud appstore
+         uses: nextcloud-releases/nextcloud-appstore-push-action@v1
+         with:
+           app_name: gdatavaas
+           appstore_token: ${{ secrets.VAAS_APPSTORE_TOKEN }}
+           download_url: ${{ steps.attach_to_release.outputs.browser_download_url }}
+           app_private_key: ${{ secrets.VAAS_NEXTCLOUD_KEY }}
