--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -39,8 +39,8 @@ jobs:
   #         path: build/
 
   release:
-    needs:
-      - test
+    # needs:
+    #   - test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
