--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -45,10 +45,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/download-artifact@master
-        with:
-          name: build-dir
-          path: build/
+      # - uses: actions/download-artifact@master
+      #   with:
+      #     name: build-dir
+      #     path: build/
 
       - name: Build for appstore
         run: make appstore
