--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 	"require-dev": {
 		"nextcloud/ocp": "dev-stable28",
 		"psalm/phar": "^5.17.0",
-		"nextcloud/coding-standard": "^v1.1.1"
+		"nextcloud/coding-standard": "^v1.1.1",
+		"symfony/console": "^6.4"
 	},
 	"scripts": {
 		"lint": "find lib -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
