--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "php-cs-fixer.executablePath": "/workspaces/nextcloud-gdata-antivirus/vendor/bin/php-cs-fixer",
     "php-cs-fixer.onsave": true,
     "php-cs-fixer.autoFixByBracket": true,
-    "php-cs-fixer.autoFixBySemicolon": true
+    "php-cs-fixer.autoFixBySemicolon": true,
+    "[php]": {
+        "editor.defaultFormatter": "junstyle.php-cs-fixer"
+    },
 }
