--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -23,6 +23,7 @@ jobs:
           bats-version: 1.11.0
 
       - name: replace version in ./appinfo/info.xml
+        if: startsWith(github.ref, 'refs/tags/')
         id: replace-version-in-info
         run: |
           RELEASE_VERSION=${GITHUB_REF#refs/tags/}
