--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -42,6 +42,10 @@ jobs:
           RELEASE_VERSION=${GITHUB_REF#refs/tags/}
           sed -i "s/<version>0.0.0<\/version>/<version>$RELEASE_VERSION<\/version>/g" ./appinfo/info.xml
 
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+
       - name: unittests
         env:
           CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
