--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,16 @@
 	},
 	"require-dev": {
 		"nextcloud/ocp": "dev-stable28",
-		"psalm/phar": "5.24.0",
+		"psalm/phar": "5.25.0",
 		"nextcloud/coding-standard": "v1.2.1",
-		"symfony/console": "v6.4.8"
+		"phpunit/phpunit": "^11.2",
+		"symfony/console": "^7.1"
+	},
+	"autoload": {
+		"psr-4": {
+			"OCP\\": "vendor/nextcloud/ocp/OCP",
+			"OCA\\GDataVaas\\": "lib"
+		}
 	},
 	"scripts": {
 		"lint": "find lib -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
