--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -2,7 +2,7 @@ name: Makefile CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "*"]
     tags: ["*"]
   pull_request:
     branches: ["*"]
