--- a/Dockerfile.Nextcloud
+++ b/Dockerfile.Nextcloud
@@ -2,7 +2,7 @@ ARG NEXTCLOUD_VERSION=29.0.4
 
 FROM nextcloud:${NEXTCLOUD_VERSION}
 
-RUN apt update && apt install -y less vim
+RUN apt update && apt install -y less vim telnet iputils-ping
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
     && chmod +x wp-cli.phar \
     && mv wp-cli.phar /usr/local/bin/wp
