remove branch-filter for prs

--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -1,11 +1,10 @@
-name: Makefile CI
+name: Build and Test
 
 on:
   push:
-    branches: ["main", "*"]
+    branches: ["main"]
     tags: ["*"]
   pull_request:
-    branches: ["*"]
   workflow_dispatch:
 
 jobs:
