Enables remote debugging of the server by default

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,9 @@
 	"forwardPorts": [
 		80
 	],
+	"containerEnv": {
+		"XDEBUG_MODE": "debug,develop"
+	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
