--- a/Dockerfile.Nextcloud
+++ b/Dockerfile.Nextcloud
@@ -5,4 +5,12 @@ FROM nextcloud:${NEXTCLOUD_VERSION}
 RUN apt update && apt install -y less vim telnet iputils-ping
 ADD --chmod=0755 https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 RUN install-php-extensions gd xdebug
+RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
+RUN sed -i 's/max_execution_time = 30/max_execution_time = -1/g' "$PHP_INI_DIR/php.ini"
+RUN sed -i 's/max_input_time = 60/max_input_time = -1/g' "$PHP_INI_DIR/php.ini"
+RUN sed -i 's/memory_limit = 128M/memory_limit = -1/g' "$PHP_INI_DIR/php.ini"
+RUN echo "error_log = /var/www/html/data/php.log" >> "$PHP_INI_DIR/php.ini"
+
+COPY opcache-disabled.ini /usr/local/etc/php/conf.d/opcache-recommended.ini
+COPY opcache-blacklist.txt /usr/local/etc/php/conf.d/opcache-blacklist.txt
 COPY xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
