Readd .env file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ js/*hot-update.*
 /fuel/app/logs/*/*/*
 /fuel/app/cache/*/*
 /fuel/app/config/crypt.php
+.env
 package-lock.json
 move_app.sh
 dev-environment*/
