--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,11 @@
 		}
 	],
 	"require": {
-		"gdata/vaas": "v9.0.3",
-		"coduo/php-humanizer": "^5.0",
-		"amphp/file": "dev-opcache-bug"
+		"gdata/vaas": "v9.0.4",
+		"coduo/php-humanizer": "^5.0"
 	},
 	"require-dev": {
-		"nextcloud/ocp": "v29.0.4",
+		"nextcloud/ocp": "v29.0.6",
 		"psalm/phar": "5.25.0",
 		"nextcloud/coding-standard": "v1.2.1",
 		"phpunit/phpunit": "10.5.30",
