--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
 	},
 	"require-dev": {
 		"nextcloud/ocp": "dev-stable28",
-		"psalm/phar": "5.25.0",
-		"nextcloud/coding-standard": "v1.2.1",
-		"phpunit/phpunit": "^11.2",
-		"symfony/console": "^7.1"
+		"psalm/phar": "5.26.0",
+		"nextcloud/coding-standard": "v1.2.3",
+		"phpunit/phpunit": "10.5.32",
+		"symfony/console": "6.4.11"
 	},
 	"autoload": {
 		"psr-4": {
