--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -17,9 +17,21 @@ jobs:
       - id: get-matrix
         run: echo "nextcloud_versions=$(./get-matrix.sh)" | tee -a "$GITHUB_OUTPUT"
 
+  build-devcontainer:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Pre-build dev container image
+        uses: devcontainers/ci@v0.3
+        with:
+          imageName: ghcr.io/gdatasoftwareag/nextcloud/builder
+          cacheFrom: ghcr.io/gdatasoftwareag/nextcloud/builder
+          push: always
+
   test:
     runs-on: ubuntu-latest
-    needs: define-matrix
+    needs: 
+      - define-matrix
+      - build-devcontainer
     strategy:
       matrix:
         nextcloud_version: ${{fromJson(needs.define-matrix.outputs.nextcloud_versions)}}
