--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -20,6 +20,7 @@ jobs:
   build-devcontainer:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Pre-build dev container image
         uses: devcontainers/ci@v0.3
         with:
