--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -36,6 +36,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/gdatasoftwareag/nextcloud/builder:latest
     needs: 
       - define-matrix
       - build-devcontainer
@@ -44,15 +46,6 @@ jobs:
         nextcloud_version: ${{fromJson(needs.define-matrix.outputs.nextcloud_versions)}}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        name: setup node
-        with:
-          node-version: 20
-
-      - name: Setup BATS
-        uses: mig4/setup-bats@v1
-        with:
-          bats-version: 1.11.0
 
       - name: replace version in ./appinfo/info.xml
         if: startsWith(github.ref, 'refs/tags/')
@@ -60,11 +53,6 @@ jobs:
         run: |
           RELEASE_VERSION=${GITHUB_REF#refs/tags/}
           sed -i "s/<version>0.0.0<\/version>/<version>$RELEASE_VERSION<\/version>/g" ./appinfo/info.xml
-
-      - uses: docker-practice/actions-setup-docker@master
-      - uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
 
       - name: unittests
         env:
