--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -51,7 +51,8 @@ jobs:
 
       - name: postStartCommand
         run: |
-          bash .devcontainer/postCreateCommands.sh
+          source .devcontainer/postCreateCommands.sh
+          ls -lha $(composer config home)/vendor/bin
 
       - name: replace version in ./appinfo/info.xml
         if: startsWith(github.ref, 'refs/tags/')
