give the shell job control

--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -2,7 +2,7 @@ name: Build and Test
 
 defaults:
   run:
-    shell: bash -ieo pipefail {0}
+    shell: bash -iemo pipefail {0}
 on:
   push:
     branches: ["main"]
