--- a/Dockerfile.Nextcloud
+++ b/Dockerfile.Nextcloud
@@ -5,7 +5,7 @@ FROM nextcloud:${NEXTCLOUD_VERSION}
 
 SHELL [ "/bin/bash", "-c" ]
 
-RUN apt -qq update && apt -qq install -y \
+RUN apt-get -q update && apt-get -q install -y \
     less vim telnet iputils-ping gdb libexpat1-dev libapr1-dev libaprutil1-dev devscripts debmake \
     bison jdupes libbrotli-dev liblua5.4-dev libnghttp2-dev libssl-dev libxml2-dev libcurl4-openssl-dev libjansson-dev
 # RUN curl -L -o /tmp/apache2_2.4.61.orig.tar.gz https://launchpad.net/debian/+archive/primary/+sourcefiles/apache2/2.4.61-1/apache2_2.4.61.orig.tar.gz \
