--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -55,7 +55,8 @@ jobs:
       - name: postStartCommand
         run: |
           source .devcontainer/postCreateCommands.sh
-          ls -lha $(composer config home)/vendor/bin
+          echo $(composer config home)/vendor/bin/ >> $GITHUB_PATH
+          ls -lha $(composer config home)/vendor/bin/
 
       - name: replace version in ./appinfo/info.xml
         if: startsWith(github.ref, 'refs/tags/')
