replace hostname in ci

--- a/tests/bats/.env-test
+++ b/tests/bats/.env-test
@@ -1,3 +1,11 @@
+#!/bin/bash
+
+if [[ "$IS_CI" == "true" ]]; then
+    HOSTNAME=nextcloud-container
+else
+    HOSTNAME=127.0.0.1
+fi
+
 export FOLDER_PREFIX=./tmp/functionality-parallel
 export TESTUSER=testuser
 export TESTUSER_PASSWORD=myfancysecurepassword234
