--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -83,7 +83,10 @@ jobs:
         run: ./install.sh ${{ matrix.nextcloud_version }} 1
 
       - name: docker ps
-        run: docker ps
+        run: |
+          docker ps
+          docker network ls
+
 
       - name: run tests
         id: bats-tests
