--- a/compose-install.yaml
+++ b/compose-install.yaml
@@ -21,8 +21,9 @@ services:
       - smtp
     restart: unless-stopped
     networks:
-      - nextcloud-network
-      - docker-bridge
+      nextcloud-network:
+      static-network:
+        ipv4_address: 172.20.128.2
   smtp:
     image: rnwood/smtp4dev:v3
     container_name: smtp
@@ -37,6 +38,8 @@ services:
 
 networks:
   nextcloud-network:
-  docker-bridge:
-    name: bridge
-    external: true
+  static-network:
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
+          ip_range: 172.20.5.0/24
