--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -43,6 +43,7 @@ jobs:
       image: ghcr.io/gdatasoftwareag/nextcloud/builder:latest
       env:
         IS_CI: true
+      options: --name $GITHUB_RUN_ID
     needs: 
       - define-matrix
       - build-devcontainer
@@ -80,6 +81,7 @@ jobs:
         run: |
           docker ps
           docker network ls
+          docker network connect nextcloud-gdata-antivirus_nextcloud-network $GITHUB_RUN_ID
 
       - name: install nextcloud
         env:
