--- a/tests/bats/.env-test
+++ b/tests/bats/.env-test
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 if [[ "$IS_CI" == "true" ]]; then
-    HOSTNAME=172.20.128.2
+    HOSTNAME=nextcloud-container
 else
     HOSTNAME=127.0.0.1
 fi
