fix smtp hostname

--- a/tests/bats/.env-test
+++ b/tests/bats/.env-test
@@ -1,9 +1,15 @@
 #!/bin/bash
 
 if [[ "$IS_CI" == "true" ]]; then
-    HOSTNAME=nextcloud-container
+    export HOSTNAME=nextcloud-container
 else
-    HOSTNAME=127.0.0.1
+    export HOSTNAME=127.0.0.1
+fi
+
+if [[ "$IS_CI" == "true" ]]; then
+    export MAIL_HOSTNAME=smtp
+else
+    export MAIL_HOSTNAME=127.0.0.1:8001
 fi
 
 export FOLDER_PREFIX=./tmp/functionality-parallel
