--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -77,21 +77,14 @@ jobs:
           composer install
           ./vendor/bin/phpunit --bootstrap tests/unittests/bootstrap.php tests/unittests/ --testdox
 
-      - name: docker ps
-        run: |
-          docker ps
-          docker network ls
-
       - name: install nextcloud
         env:
           CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
         run: ./install.sh ${{ matrix.nextcloud_version }} 1
 
-      - name: docker ps
+      - name: add builder into nextcloud network
         run: |
-          docker ps --format json
-          docker network ls
           docker network connect nextcloud-gdata-antivirus_nextcloud-network nextcloud-antivirus-build-container
 
       - name: run tests
