Use devcontainer in build (#142)
* WIP

* WIP magic

* adjust scoper config

* Resolve dependency hell

* Make something

* add build step for the nextcloud builder

* add the checkout step

* login to registry

* use devcontainer as build-runner2

* skip the postCreate stuff when in CI

* change default shell for docker build

* extract some functions from the script to features

* run poststartcommands in ci

* fix filename

* fix script for non vscode environments

* remove extra install scoper step

* add fail fast on install

* use bash as default shell

* make apt less noisy

* try another fail

* remove trap in distclean

* add memory.ini to top

* give the shell job control

* just use bash

* Scope dependencies (#138)

Scope dependencies

---------

Co-authored-by: Matthias Simonis <github@matthias-simonis.de>

* Fix if the file size is zero, the app evaluates the file as too large to scan

(cherry picked from commit c37472d68d36007e3c28739015f9f78092ccb59a)

* WIP

* WIP magic

* adjust scoper config

* Resolve dependency hell

* Make something

* add fail fast on install

* exit early in the install script

* fix stuff

* add composer path to github path

* split postCreate and add to path

* remove the scoper installation (done in the postCreateCommand)

* add container user vscode

* remove vscode user

* add docker ps

* replace hostname in ci

* add debug stuff

* use static ip

* show json ps

* try connect the builder container to the compose network

* fix name

* move connect to after installation

* fix hostname

* add hostname to trusted_domains array

* fix smtp hostname

* replace quote types

* remove debugging stuff

---------

Co-authored-by: Lennart Dohmann <lennart.dohmann@gdata.de>
Co-authored-by: PT-ATA No One <ata-no-one@gdata.de>

--- a/compose-install.yaml
+++ b/compose-install.yaml
@@ -21,7 +21,7 @@ services:
       - smtp
     restart: unless-stopped
     networks:
-      - nextcloud-network
+      nextcloud-network:
   smtp:
     image: rnwood/smtp4dev:v3
     container_name: smtp
