--- a/tests/bats/.env-test
+++ b/tests/bats/.env-test
@@ -1,3 +1,17 @@
+#!/bin/bash
+
+if [[ "$IS_CI" == "true" ]]; then
+    export HOSTNAME=nextcloud-container
+else
+    export HOSTNAME=127.0.0.1
+fi
+
+if [[ "$IS_CI" == "true" ]]; then
+    export MAIL_HOSTNAME=smtp
+else
+    export MAIL_HOSTNAME=127.0.0.1:8001
+fi
+
 export FOLDER_PREFIX=./tmp/functionality-parallel
 export TESTUSER=testuser
 export TESTUSER_PASSWORD=myfancysecurepassword234
