--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
     "php-cs-fixer.executablePath": "/workspaces/nextcloud-gdata-antivirus/vendor/bin/php-cs-fixer",
-    "php-cs-fixer.onsave": true,
+    "php-cs-fixer.onsave": false,
     "php-cs-fixer.autoFixByBracket": true,
     "php-cs-fixer.autoFixBySemicolon": true,
     "[php]": {
         "editor.defaultFormatter": "junstyle.php-cs-fixer"
     },
+    "php.suggest.basic": false
 }
