--- a/Dockerfile.Nextcloud
+++ b/Dockerfile.Nextcloud
@@ -31,8 +31,6 @@ RUN echo "error_log = /var/www/html/data/php.log" >> "$PHP_INI_DIR/php.ini"
 RUN sed -i 's/#LogLevel info ssl:warn/LogLevel debug/g' /etc/apache2/sites-available/000-default.conf
 
 COPY xdebug.ini /tmp/xdebug.ini
-RUN if [[ "$INSTALL_XDEBUG" == "1" ]]; then \
-    install-php-extensions gd xdebug; \
-    mv /tmp/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
-    fi
+RUN install-php-extensions gd xdebug;
+RUN mv /tmp/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini;
 
