--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 	"autoload": {
 		"psr-4": {
 			"OCP\\": "vendor/nextcloud/ocp/OCP",
+			"OCA\\Files_Trashbin\\": "nextcloud-server/apps/files_trashbin",
 			"OCA\\GDataVaas\\": "lib"
 		}
 	},
