--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,11 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "packageRules": [
+    {
+      "description": "disable major updates for the vaas dependency",
+      "matchDepNames": "gdata/vaas",
+      "enabled": false,
+      "matchUpdateTypes": ["major"]
+    }
+  ]
 }
