Try full async PHP HTTP SDK (#172)
* Remove deprecated code for file action
* Upgrade to new major version of gdata/vaas
* Fix linter warnings
* Disable parallelized BATS execution

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		}
 	],
 	"require": {
-		"gdata/vaas": "v9.0.5",
+		"gdata/vaas": ">=11.0.0",
 		"coduo/php-humanizer": "^5.0"
 	},
 	"require-dev": {
