Try full async PHP HTTP SDK (#172)
* Remove deprecated code for file action
* Upgrade to new major version of gdata/vaas
* Fix linter warnings
* Disable parallelized BATS execution

(cherry picked from commit 5d2055cda4b3c84b39d20e4f60ec0cf6d52d6765)

--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -93,7 +93,7 @@ jobs:
           CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
         run: |
-          if bats --verbose-run --timing --trace --no-parallelize-across-files --jobs 2 ./tests/bats; then
+          if bats --verbose-run --timing --trace ./tests/bats; then
             echo "bats_run=success" | tee -a "$GITHUB_OUTPUT";
           else
             echo "bats_run=fail" | tee -a "$GITHUB_OUTPUT";
